--- a/HW1_620.ipynb
+++ b/HW1_620.ipynb
@@ -22,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    # create graph
+    "# Create graph"
     "g = nx.Graph()\n",
     "g.add_node('Carol',pos = (0.5,2))\n",
     "g.add_node('Andre',pos = (0,1.5))\n",
