--- a/HW1_620.ipynb
+++ b/HW1_620.ipynb
@@ -24,6 +24,7 @@
    "source": [
     "# Create graph\n",
     "g = nx.Graph()\n",
+    "# Create nodes\n",
     "g.add_node('Carol',pos = (0.5,2))\n",
     "g.add_node('Andre',pos = (0,1.5))\n",
     "g.add_node('Fernando',pos = (1,1.5))\n",
@@ -34,9 +35,11 @@
     "g.add_node('Lke',pos = (2,1))\n",
     "g.add_node('Jane',pos = (2.5,1))\n",
     "g.add_node('Diane',pos = (0.5,1))\n",
+    "# Create edge I use add edge from to crate mutiple edge at one time\n",
     "g.add_edges_from([('Carol','Andre'),('Carol','Fernando'),('Andre','Beverly'),('Beverly','Ed'),('Ed','Garth'),('Garth','Fernando')])\n",
     "g.add_edges_from([('Fernando','Diane'),('Diane','Beverly'),('Andre','Diane'),('Diane','Garth'),('Andre','Fernando'),('Beverly','Garth')])\n",
     "g.add_edges_from([('Carol','Diane'),('Diane','Ed'),('Fernando','Healther'),('Garth','Healther'),('Healther','Lke'),('Lke','Jane')])\n",
+    "# get postition\n",
     "pos = nx.get_node_attributes(g, 'pos')"
    ]
   },
