--- a/HW1_620.ipynb
+++ b/HW1_620.ipynb
@@ -22,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "# Create graph\n",
+    "# Create graph assume total graph size is 2 by 2.5\n",
     "g = nx.Graph()\n",
     "# Create nodes\n",
     "g.add_node('Carol',pos = (0.5,2))\n",
